# s25edit

./: .gitattributes  .gitignore  CButton.cpp  CButton.h  CDebug.cpp  CDebug.h  CFile.cpp  CFile.h  CFont.cpp  CFont.h  CGame.cpp  CGame.h  CGame_Cleanup.cpp  CGame_Event.cpp  CGame_GameLoop.cpp  CGame_Init.cpp  CGame_Render.cpp  CMakeLists.txt  CMap.cpp  CMap.h  CMenu.cpp  CMenu.h  CPicture.cpp  CPicture.h  CSurface.cpp  CSurface.h  CSurfaceGL.cpp  CSurfaceGL.h  CWindow.cpp  CWindow.h  GEOMETRY.md  GEOMETRY2.md  GameWorldView.cpp  GameWorldView.h  GlTexture.cpp  GlTexture.h  README.md  SdlSurface.h  TerrainRenderer.cpp  Texture.cpp  (+22 more)
.github/workflows/: ci.yml
.reuse/: dep5
CIO/: CButton.cpp  CButton.h  CControlContainer.cpp  CControlContainer.h  CFile.cpp  CFile.h  CFont.cpp  CFont.h  CIO.h  CMenu.cpp  CMenu.h  CPicture.cpp  CPicture.h  CSelectBox.cpp  CSelectBox.h  CTextfield.cpp  CTextfield.h  CWindow.cpp  CWindow.h
LibSGE/: LibSGE.cbp  LibSGE.layout  sge_blib.cpp  sge_blib.h  sge_bm_text.h  sge_misc.cpp  sge_textpp.h  sge_tt_text.cpp
SGE/: CMakeLists.txt  LICENSE  LibSGE.cbp  LibSGE.depend  LibSGE.layout  README.md  sge.h  sge_blib.cpp  sge_blib.h  sge_bm_text.cpp  sge_bm_text.h  sge_collision.cpp  sge_collision.h  sge_internal.h  sge_misc.cpp  sge_misc.h  sge_primitives.cpp  sge_primitives.h  sge_primitives_int.h  sge_rotation.cpp  sge_rotation.h  sge_shape.cpp  sge_shape.h  sge_surface.cpp  sge_surface.h  sge_textpp.cpp  sge_textpp.h  sge_tt_text.cpp  sge_tt_text.h
SGE/include/SGE/: FixedPoint.h  sge.h  sge_blib.h  sge_bm_text.h  sge_collision.h  sge_config.h  sge_internal.h  sge_misc.cpp  sge_misc.h  sge_primitives.h  sge_rotation.h  sge_shape.h  sge_surface.h  sge_textpp.h  sge_tt_text.h
include/: Geometry.h  SdlSurface.h  TerrainRenderer.h  defines.h
tools/ci/: checkIncludeGuards.sh
